# wdadaptivepy

./: .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-quality.yml  deploy.yml  pypi_publish.yml
assets/javascripts/: bundle.79ae519e.min.js  bundle.92b07e13.min.js  bundle.f55a23d4.min.js
docs/: index.md
docs/.overrides/partials/: actions.html
docs/.scripts/: gen_ref_pages.py
docs/community/: code_of_conduct.md.draft  developing.md.draft  license.md.draft
docs/getting_started/: ConnectingtoAdaptive.md  GetData.md  GetDataFromModeledSheet.md  Levels.GetAll.md  Levels.GetAncestors.md  installation.md
docs/news/: .authors.yml
docs/news/posts/: alpha_release.md  beta_release.md  rc_release.md
getting_started/: index.html
getting_started/ConnectingtoAdaptive/: index.html
getting_started/GetData/: index.html
getting_started/GetDataFromModeledSheet/: index.html
getting_started/Levels.GetAll/: index.html
getting_started/Levels.GetAncestors/: index.html
getting_started/installation/: index.html
news/: index.html
news/alpha-release/: index.html
news/archive/2025/: index.html
news/beta-release/: index.html
news/category/release/: index.html
news/category/roadmap/: index.html
news/posts/alpha_release/: index.html
news/posts/beta_release/: index.html
news/posts/rc_release/: index.html
reference/SUMMARY/: index.html
reference/wdadaptivepy/__init__/: index.html
reference/wdadaptivepy/connectors/__init__/: index.html
reference/wdadaptivepy/main/: index.html
reference/wdadaptivepy/models/__init__/: index.html
reference/wdadaptivepy/models/account/: index.html
reference/wdadaptivepy/models/attribute/: index.html
reference/wdadaptivepy/models/attribute_value/: index.html
reference/wdadaptivepy/models/base/: index.html
reference/wdadaptivepy/models/currency/: index.html
reference/wdadaptivepy/models/data/: index.html
reference/wdadaptivepy/models/dimension/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/wdadaptivepy/: main.py
src/wdadaptivepy/models/: account.py  attribute.py  attribute_value.py  base.py  currency.py  data.py  dimension.py  dimension_value.py  group.py  level.py  list.py  permission_set.py  time.py  user.py  version.py
src/wdadaptivepy/services/: accounts.py  attribute_values.py  attributes.py  currencies.py  data.py  dimension_values.py  dimensions.py  groups.py  levels.py  permission_sets.py  time.py  users.py  versions.py
src/wdadaptivepy/utils/: __init__.py  parsers.py  validators.py
tests/test_wdadaptivepy/: __init__.py  test_main.py
tests/test_wdadaptivepy/test_connectors/: __init__.py  test_xml_api.py
tests/test_wdadaptivepy/test_models/: __init__.py  test_level.py  test_list.py  test_period.py
tests/test_wdadaptivepy/test_services/: __init__.py  test_accounts.py  test_attribute_values.py  test_attributes.py  test_currencies.py  test_dimension_values.py  test_dimensions.py  test_groups.py  test_levels.py  test_permission_sets.py  test_time.py  test_users.py  test_versions.py
(+42 files in other folders)
